--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     ports:
       - 8000:8000
     stdin_open: true
+    mem_limit: 512m
 
   db:
     image: postgres
@@ -28,6 +29,8 @@ services:
       - POSTGRES_HOST=db
     volumes:
       - pgdata:/var/lib/postgresql/data
+  
+    mem_limit: 512m
 
 volumes:
   pgdata:
